opencl: add conv2d transpose test

--- a/mindspore/lite/test/CMakeLists.txt
+++ b/mindspore/lite/test/CMakeLists.txt
@@ -294,6 +294,7 @@ if (SUPPORT_GPU)
             ${TEST_DIR}/ut/src/runtime/kernel/opencl/avg_pooling_tests.cc
             ${TEST_DIR}/ut/src/runtime/kernel/opencl/max_pooling_tests.cc
             ${TEST_DIR}/ut/src/runtime/kernel/opencl/utils_tests.cc
+            ${TEST_DIR}/ut/src/runtime/kernel/opencl/conv2d_transpose_tests.cc
             )
 endif()
 
