remove unused third_party & strip so when Release

--- a/mindspore/lite/CMakeLists.txt
+++ b/mindspore/lite/CMakeLists.txt
@@ -16,15 +16,7 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 include_directories(${TOP_DIR}/third_party)
 include_directories(${TOP_DIR}/third_party/flatbuffers/include)
 
-include(${TOP_DIR}/cmake/utils.cmake)
-include(${TOP_DIR}/cmake/dependency_utils.cmake)
-include(${TOP_DIR}/cmake/external_libs/json.cmake)
-include(${TOP_DIR}/cmake/dependency_securec.cmake)
-set(CMAKE_VERBOSE_MAKEFILE on)
-add_compile_definitions(USE_ANDROID_LOG)
-add_compile_definitions(NO_DLIB)
-add_compile_options(-fPIC)
-
+option(CMAKE_BUILD_TYPE "build type" Release)
 option(BUILD_DEVICE "if build device" on)
 option(SUPPORT_TRAIN "if build for on-device train" off)
 option(PLATFORM_ARM64 "if build device for arm64" off)
@@ -34,6 +26,14 @@ option(ENABLE_FP16 "if build fp16 ops" off)
 option(SUPPORT_GPU "if support gpu" off)
 option(OFFLINE_COMPILE "if offline compile OpenCL kernel" off)
 option(BUILD_MINDDATA "" off)
+
+set(CMAKE_VERBOSE_MAKEFILE on)
+add_compile_definitions(USE_ANDROID_LOG)
+add_compile_definitions(NO_DLIB)
+add_compile_options(-fPIC)
+if("${CMAKE_BUILD_TYPE}" STREQUAL "Release")
+    #set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fvisibility=hidden")
+endif()
 
 if (BUILD_DEVICE)
     add_compile_definitions(BUILD_DEVICE)
@@ -91,6 +91,10 @@ if (BUILD_CONVERTER)
         set(PYTHON_LIBRARIES "${py_lib}")
     endif()
     include_directories(${PYTHON_INCLUDE_DIRS})
+    include(${TOP_DIR}/cmake/utils.cmake)
+    include(${TOP_DIR}/cmake/dependency_utils.cmake)
+    include(${TOP_DIR}/cmake/external_libs/json.cmake)
+    include(${TOP_DIR}/cmake/dependency_securec.cmake)
     include(${TOP_DIR}/cmake/external_libs/pybind11.cmake)
     include(${TOP_DIR}/cmake/external_libs/eigen.cmake)
     include_directories(${TOP_DIR}/third_party/protobuf/build/include)
