--- a/mindspore/lite/CMakeLists.txt
+++ b/mindspore/lite/CMakeLists.txt
@@ -65,8 +65,8 @@ endif()
 
 set(ANF_SRC
         ${CMAKE_CURRENT_SOURCE_DIR}/../core/ir/meta_tensor.cc
-        ${CCSRC_DIR}/gvar/logging_level.cc
-        ${CCSRC_DIR}/gvar/typeid_manager.cc
+        ${CORE_DIR}/gvar/logging_level.cc
+        ${CORE_DIR}/gvar/typeid_manager.cc
         ${CMAKE_CURRENT_SOURCE_DIR}/../core/base/base.cc
         ${CMAKE_CURRENT_SOURCE_DIR}/../core/utils/log_adapter.cc
         )
