fix bug for securec

--- a/mindspore/lite/CMakeLists.txt
+++ b/mindspore/lite/CMakeLists.txt
@@ -16,6 +16,10 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 include_directories(${TOP_DIR}/third_party)
 include_directories(${TOP_DIR}/third_party/flatbuffers/include)
 
+include(${TOP_DIR}/cmake/utils.cmake)
+include(${TOP_DIR}/cmake/dependency_utils.cmake)
+include(${TOP_DIR}/cmake/dependency_securec.cmake)
+
 option(CMAKE_BUILD_TYPE "build type" Release)
 option(BUILD_DEVICE "if build device" on)
 option(SUPPORT_TRAIN "if build for on-device train" off)
@@ -91,10 +95,10 @@ if (BUILD_CONVERTER)
         set(PYTHON_LIBRARIES "${py_lib}")
     endif()
     include_directories(${PYTHON_INCLUDE_DIRS})
-    include(${TOP_DIR}/cmake/utils.cmake)
-    include(${TOP_DIR}/cmake/dependency_utils.cmake)
+#    include(${TOP_DIR}/cmake/utils.cmake)
+#    include(${TOP_DIR}/cmake/dependency_utils.cmake)
     include(${TOP_DIR}/cmake/external_libs/json.cmake)
-    include(${TOP_DIR}/cmake/dependency_securec.cmake)
+#    include(${TOP_DIR}/cmake/dependency_securec.cmake)
     include(${TOP_DIR}/cmake/external_libs/pybind11.cmake)
     include(${TOP_DIR}/cmake/external_libs/eigen.cmake)
     include_directories(${TOP_DIR}/third_party/protobuf/build/include)
