add opencl transpose(NHWC2HCHW)

--- a/mindspore/lite/test/CMakeLists.txt
+++ b/mindspore/lite/test/CMakeLists.txt
@@ -129,6 +129,7 @@ if (SUPPORT_GPU)
             ${LITE_DIR}/src/runtime/kernel/opencl/kernel/softmax.cc
             ${LITE_DIR}/src/runtime/kernel/opencl/kernel/concat.cc
             ${LITE_DIR}/src/runtime/kernel/opencl/kernel/conv2d_transpose.cc
+            ${LITE_DIR}/src/runtime/kernel/opencl/kernel/transpose.cc
             )
 endif()
 ### minddata lite
@@ -295,6 +296,7 @@ if (SUPPORT_GPU)
             ${TEST_DIR}/ut/src/runtime/kernel/opencl/max_pooling_tests.cc
             ${TEST_DIR}/ut/src/runtime/kernel/opencl/utils_tests.cc
             ${TEST_DIR}/ut/src/runtime/kernel/opencl/conv2d_transpose_tests.cc
+            ${TEST_DIR}/ut/src/runtime/kernel/opencl/transpose_tests.cc
             )
 endif()
 
