add new caffe nets

--- a/mindspore/lite/test/models_caffe.cfg
+++ b/mindspore/lite/test/models_caffe.cfg
@@ -1,1 +1,15 @@
+age_medium
+beard
+emotion
+gender_res_large_deploy
+glasses
+hat
+isface
+ml_bank_detect_0312
 ml_face_div_parsing
+ml_hardware_eyeclose
+ml_ocr_detect_20200305
+Mnet6_0312_extract_pay
+pose_3d
+RFB-Epoch-170-no-transpose
+tracking
