--- a/mindspore/lite/src/runtime/kernel/arm/CMakeLists.txt
+++ b/mindspore/lite/src/runtime/kernel/arm/CMakeLists.txt
@@ -10,6 +10,13 @@ file(GLOB KERNEL_SRC
         ${CMAKE_CURRENT_SOURCE_DIR}/int8/*.cc
         )
 
+if (SUPPORT_TRAIN)
+file (GLOB TRAIN_KERNEL_SRC
+        ${CMAKE_CURRENT_SOURCE_DIR}/fp32_grad/*.cc
+        ${CMAKE_CURRENT_SOURCE_DIR}/nnacl/fp32_grad/*.cc
+        )
+endif()
+
 if (PLATFORM_ARM64)
     # assembly
     file(GLOB ASSEMBLY_SRC nnacl/assembly/arm64/*.s
@@ -27,5 +34,5 @@ if (PLATFORM_ARM32)
     set(KERNEL_SRC ${KERNEL_SRC} ${ASSEMBLY_SRC})
 endif()
 
-add_library(cpu_kernel_mid_ OBJECT ${KERNEL_SRC})
+add_library(cpu_kernel_mid_ OBJECT ${KERNEL_SRC} ${TRAIN_KERNEL_SRC})
 add_subdirectory(nnacl)
