--- a/mindspore/lite/test/models_tflite.cfg
+++ b/mindspore/lite/test/models_tflite.cfg
@@ -4,9 +4,6 @@ hiai_bigmodel_ghost_2_1_no_normalized_no_trans_tflite.tflite
 hiai_bigmodel_ghost_5_1_no_normalized_no_trans_tflite.tflite
 hiai_cn_recognize_modify_padv2.tflite
 hiai_model_normalize_object_scene_ps_20200519.tflite
-hiai_detectmodel_06_23_960_480_1180700.tflite
-hiai_detect_curve_model_float32.tflite
-hiai_detectmodel_desnet_256_128_64_32.tflite
 mtk_AADB_HADB_MBV2_model_fp32.tflite
 mobilenet_v1_0.25_128.tflite
 mobilenet_v1_0.25_160.tflite
@@ -25,3 +22,5 @@ mobilenet_v1_1.0_160.tflite
 mobilenet_v1_1.0_192.tflite
 mobilenet_v1_1.0_224.tflite
 mobilenet_v2_1.0_224.tflite
+densenet.tflite
+resnet_v2_101_299.tflite
