--- a/mindspore/ccsrc/minddata/dataset/kernels/image/CMakeLists.txt
+++ b/mindspore/ccsrc/minddata/dataset/kernels/image/CMakeLists.txt
@@ -7,6 +7,7 @@ add_library(kernels-image OBJECT
     center_crop_op.cc
     crop_op.cc
     cut_out_op.cc
+    cutmix_batch_op.cc
     decode_op.cc
     equalize_op.cc
     hwc_to_chw_op.cc
