bug fix for glog level don't work

--- a/mindspore/core/CMakeLists.txt
+++ b/mindspore/core/CMakeLists.txt
@@ -1,6 +1,7 @@
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 include_directories(${CMAKE_BINARY_DIR})
 include_directories(${CMAKE_SOURCE_DIR}/mindspore/core)
+add_subdirectory(gvar)
 message("************build core***************")
 
 if (CMAKE_SYSTEM_NAME MATCHES "Windows")
@@ -14,10 +15,10 @@ file(GLOB_RECURSE CORE_SRC_LIST RELATIVE ${CMAKE_CURRENT_SOURCE_DIR}
         "c_ops/*.cc"
         "ir/*.cc"
         "utils/*.cc"
-        "gvar/*.cc"
 )
 set_property(SOURCE ${CORE_SRC_LIST} PROPERTY COMPILE_DEFINITIONS SUBMODULE_ID=mindspore::SubModuleId::SM_CORE)
 add_library(mindspore_core STATIC ${CORE_SRC_LIST})
+target_link_libraries(mindspore_core PRIVATE mindspore_gvar)
 if (USE_GLOG)
     target_link_libraries(mindspore_core PRIVATE mindspore::glog)
 endif ()
