--- a/serving/CMakeLists.txt
+++ b/serving/CMakeLists.txt
@@ -110,5 +110,5 @@ if (ENABLE_ACL)
     target_link_libraries(ms_serving ${ALC_LIB_SO})
     target_link_libraries(ms_serving jpeg_turbo::jpeg)
 else ()
-    target_link_libraries(ms_serving inference)
+    target_link_libraries(ms_serving inference mindspore_gvar)
 endif ()
