--- a/mindspore/lite/test/CMakeLists.txt
+++ b/mindspore/lite/test/CMakeLists.txt
@@ -89,7 +89,7 @@ file(GLOB KERNEL_OP_SRC
         )
 
 file(GLOB KERNEL_OP_TRAIN_SRC
-        ${LITE_DIR}/src/runtime/kernel/arm/nnacl/fp32_grad/*.cc 
+        ${LITE_DIR}/src/runtime/kernel/arm/nnacl/fp32_grad/*.cc
         ${LITE_DIR}/src/runtime/kernel/arm/fp32_grad/*.cc
 )
 
@@ -142,7 +142,7 @@ if (SUPPORT_GPU)
             ${LITE_DIR}/src/runtime/kernel/opencl/kernel/matmul.cc
             ${LITE_DIR}/src/runtime/kernel/opencl/kernel/softmax.cc
             ${LITE_DIR}/src/runtime/kernel/opencl/kernel/concat.cc
-            ${LITE_DIR}/src/runtime/kernel/opencl/kernel/leaky_relu.cc
+            # ${LITE_DIR}/src/runtime/kernel/opencl/kernel/leaky_relu.cc
             ${LITE_DIR}/src/runtime/kernel/opencl/kernel/conv2d_transpose.cc
             ${LITE_DIR}/src/runtime/kernel/opencl/kernel/transpose.cc
             )
@@ -319,7 +319,7 @@ if (SUPPORT_GPU)
             ${TEST_DIR}/ut/src/runtime/kernel/opencl/conv2d_transpose_tests.cc
             ${TEST_DIR}/ut/src/runtime/kernel/opencl/transpose_tests.cc
             ${TEST_DIR}/ut/src/runtime/kernel/opencl/convolution_tests.cc
-            ${TEST_DIR}/ut/src/runtime/kernel/opencl/leakyrelu_tests.cc
+            # ${TEST_DIR}/ut/src/runtime/kernel/opencl/leakyrelu_tests.cc
             )
 endif()
 
