--- a/mindspore/lite/test/models_tflite.cfg
+++ b/mindspore/lite/test/models_tflite.cfg
@@ -26,3 +26,5 @@ densenet.tflite
 resnet_v2_101_299.tflite
 mnasnet_1.3_224.tflite
 inception_v3.tflite
+deeplabv3_257_mv_gpu.tflite
+multi_person_mobilenet_v1_075_float.tflite
