add label_detect & transfer_learning models

--- a/mindspore/lite/test/models_tflite.cfg
+++ b/mindspore/lite/test/models_tflite.cfg
@@ -22,6 +22,8 @@ mobilenet_v1_1.0_160.tflite
 mobilenet_v1_1.0_192.tflite
 mobilenet_v1_1.0_224.tflite
 mobilenet_v2_1.0_224.tflite
+mtk_model_normalize_object_scene_ps_20200519_f32.tflite
+mtk_model_ckpt.tflite
 densenet.tflite
 resnet_v2_101_299.tflite
 mnasnet_1.3_224.tflite
