--- a/tests/ut/cpp/dataset/CMakeLists.txt
+++ b/tests/ut/cpp/dataset/CMakeLists.txt
@@ -55,12 +55,14 @@ SET(DE_UT_SRCS
         random_vertical_flip_with_bbox_op_test.cc
         rename_op_test.cc
         repeat_op_test.cc
-        skip_op_test.cc
         rescale_op_test.cc
         resize_bilinear_op_test.cc
         resize_op_test.cc
         resize_with_bbox_op_test.cc
+	rgba_to_bgr_op_test.cc
+	rgba_to_rgb_op_test.cc
         schema_test.cc
+        skip_op_test.cc
         shuffle_op_test.cc
         stand_alone_samplers_test.cc
         status_test.cc
