add six caffe model as gate

--- a/mindspore/lite/test/models_caffe.cfg
+++ b/mindspore/lite/test/models_caffe.cfg
@@ -16,3 +16,9 @@ tracking
 mtk_isface
 mtk_landmark
 mtk_pose_tuku
+ml_hand_detection
+ml_ocr_cn
+ml_ocr_sfz_detect_0325
+ml_hardware_liveness
+ml_liveness_detect_landmark
+ml_face_contour
