--- a/mindspore/lite/tools/converter/CMakeLists.txt
+++ b/mindspore/lite/tools/converter/CMakeLists.txt
@@ -71,7 +71,6 @@ file(GLOB_RECURSE CONVERTER_SRC RELATIVE ${CMAKE_CURRENT_SOURCE_DIR}
         ${CMAKE_CURRENT_SOURCE_DIR}/../common/flag_parser.cc
         ${CMAKE_CURRENT_SOURCE_DIR}/../common/storage.cc
         # ${CMAKE_CURRENT_SOURCE_DIR}/../../src/common/anf_exporter/anf_exporter.cc
-        ${CMAKE_CURRENT_SOURCE_DIR}/parser/onnx/onnx.pb.cc
 
         ../optimizer/common/node_pass_extends.cc
         ../optimizer/common/pass_manager_extends.cc
@@ -86,6 +85,7 @@ file(GLOB_RECURSE CONVERTER_SRC RELATIVE ${CMAKE_CURRENT_SOURCE_DIR}
 
 add_subdirectory(parser/caffe)
 add_subdirectory(parser/tflite)
+add_subdirectory(parser/onnx)
 add_subdirectory(legacy_optimizer)
 add_subdirectory(quantizer)
 
@@ -98,6 +98,7 @@ add_executable(converter_lite
 target_link_libraries(converter_lite PRIVATE
         tflite_parser_mid
         caffe_parser_mid
+        onnx_parser_mid
         anf_importer_mid
         node_mid
         graph_pass_mid
